--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-mapbox-gl/maps": "^8.3.0",
+    "@react-navigation/native": "^6.0.2",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-axios": "^0.17.1",
+    "react-native-paper": "^4.9.2",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
