--- a/package.json
+++ b/package.json
@@ -4,13 +4,30 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+	    "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|(@react-native-mapbox-gl|react-native)/|(@expo/vector-icons/*|react-native-vector-icons/*))"
+	],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "setupFilesAfterEnv": [
+      "@react-native-mapbox-gl/maps/setup-jest"
+    ]
   },
   "dependencies": {
     "@mdi/js": "^5.9.55",
     "@react-native-mapbox-gl/maps": "^8.3.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/jest": "^27.0.1",
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
@@ -18,6 +35,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "jest-expo": "^42.1.0",
     "react": "16.13.1",
     "react-devtools": "^4.17.0",
     "react-dom": "16.13.1",
@@ -30,6 +48,7 @@
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
@@ -38,6 +57,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-test-renderer": "^17.0.1",
     "typescript": "~4.0.0"
   },
   "private": true,
