[Style]_Style informationsScreen done

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
-	    "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|(@react-native-mapbox-gl|react-native)/|(@expo/vector-icons/*|react-native-vector-icons/*))"
-	],
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|(@react-native-mapbox-gl|react-native)/|(@expo/vector-icons/*|react-native-vector-icons/*))"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -40,6 +40,7 @@
     "react-devtools": "^4.17.0",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
