--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native-mapbox-gl/maps": "^8.3.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^27.0.1",
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
