--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-mock-store": "^1.0.3",
     "typescript": "~4.0.0"
   },
   "private": true,
